--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h3>hello mama, i am using git!!!</h3>
     <p>ok i am agree with you</p>
+    <img src="nature.jpeg"> 
 </body>
 </html>
