--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <h3>hello mama, i am using git!!!</h3>
     <p>ok i am agree with you</p>
+    <p>my name is naiem</p>
+    <p>you are looking preety</p>
+    <p>what its it???</p>
     <img src="nature.jpeg"> 
 </body>
 </html>
