--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h3>hello mama, i am using git!!!</h3>
     <p>ok i am agree with you</p>
+    <p>it's me farzana</p>
+    <p>i am larning branch</p>
     <img src="nature.jpeg"> 
 </body>
 </html>
