--- a/index.html
+++ b/index.html
@@ -8,14 +8,7 @@
 <body>
     <h3>hello mama, i am using git!!!</h3>
     <p>ok i am agree with you</p>
-<<<<<<< HEAD
-    <p>it's me farzana</p>
-    <p>i am larning branch</p>
-=======
-    <p>my name is naiem</p>
-    <p>you are looking preety</p>
-    <p>what its it???</p>
->>>>>>> my-fourth-branch
+    <p>i love you</p>
     <img src="nature.jpeg"> 
 </body>
 </html>
