--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h3>hello mama, i am using git!!!</h3>
     <p>ok i am agree with you</p>
     <p>i love you</p>
+    <p>i am a learner</p>
+    <p>i am naiem</p>
     <img src="nature.jpeg"> 
 </body>
 </html>
