--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>i love you</p>
     <p>i am a learner</p>
     <p>i am naiem</p>
+    <h2>talking from second branch</h2>
     <img src="nature.jpeg"> 
 </body>
 </html>
