third commit adding

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <p>i am a learner</p>
     <p>i am naiem</p>
     <h2>talking from second branch</h2>
+    <p>Rural Literacy Solutions is a non-compulsory and an extra-curricula education. This Community-based Organization, is a practical response to the diagnosed high rate of illiteracy in Ghana especially the rural areas of the Northern part of the country</p>
+
     <img src="nature.jpeg"> 
 </body>
 </html>
