--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h3>hello mama, i am using git!!!</h3>
-    <p>ok i am agree with you</p>
+    <p>ok i am agree with you thi is updated again on second branch</p>
     <p>i love you</p>
     <p>i am a learner</p>
     <p>i am naiem</p>
